--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">your rocksbox promo code is michellegbff54</h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">&nbsp;your rocksbox promo code</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-7">It includes a free month trial subscription, and all member perks including a $21 jewelry credit and free shipping and returns! You can either copy and paste the code at Rocksbox during checkout, or click the button to open a new window at Rocksbox.com, with the promo code already applied.</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-7">includes a free month trial subscription, and all member perks including a $21 jewelry credit and <br>free shipping and returns! You can either copy and paste the code at Rocksbox during checkout, <br>or click the button to open a new window at Rocksbox.com, with the promo code already applied.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-warning display-5" href="https://www.rocksbox.com/?utm_source=bffprogram&utm_medium=referral&utm_campaign=email&utm_content=share&auto_apply=true&promo_code=michellegbff54" target="_blank">MICHELLEGBFF54</a></div>
             </div>
         </div>
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/o">one page site templates</a></section><section class="features8 cid-qDh5eA4FQB" id="features8-u">
+<section class="engine"><a href="https://mobirise.me/z">best css templates</a></section><section class="features8 cid-qDh5eA4FQB" id="features8-u">
 
     
 
