create github pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">&nbsp;your rocksbox promo code</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">includes a free month trial subscription, and all member perks including a $21 jewelry credit and <br>free shipping and returns! You can either copy and paste the code at Rocksbox during checkout, <br>or click the button to open a new window at Rocksbox.com, with the promo code already applied.</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-warning display-5" href="https://www.rocksbox.com/?utm_source=bffprogram&utm_medium=referral&utm_campaign=email&utm_content=share&auto_apply=true&promo_code=juliagbff16" target="_blank">JULIAGBFF16</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-warning display-5" href="https://www.rocksbox.com/?utm_source=bffprogram&utm_medium=referral&utm_campaign=email&utm_content=share&auto_apply=true&promo_code=michellegbff54" target="_blank">MICHELLEGBFF54</a></div>
             </div>
         </div>
     </div>
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/i">free website creation software</a></section><section class="features8 cid-qDh5eA4FQB" id="features8-u">
+<section class="engine"><a href="https://mobirise.me/u">bootstrap website templates</a></section><section class="features8 cid-qDh5eA4FQB" id="features8-u">
 
     
 
